--- a/vue/Klinika-ui/index.html
+++ b/vue/Klinika-ui/index.html
@@ -10,7 +10,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app" class="bg-slate-200"></div>
+    <div id="app" class=""></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
